# silk-encode

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/bugly/: BuglySymtabLog.txt  BuglyUploadLog.txt
app/src/androidTest/java/com/baice/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/baice/app/: MainActivity.java  MyApplication.java
app/src/main/java/com/baice/app/sound/: Codec.java  Filer.java  IRecordCallback.java  KCacheUtils.java  Recorder.java  SilkFileDecoder.java  SoundMan.java  Supporter.java  Uploader.java  VoiceRecordResult.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/baice/app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
silkcodec/: CMakeLists.txt  build.gradle
silkcodec/src/main/: AndroidManifest.xml
silkcodec/src/main/cpp/: android_log.h
silkcodec/src/main/cpp/jni/: JNI_OnLoad.cc  silk_decoder.cc  silk_decoder.h  silk_encoder.cc  silk_encoder.h
silkcodec/src/main/cpp/jni/util/: comm_function.cc  comm_function.h  scope_jenv.cc  scope_jenv.h  var_cache.cc  var_cache.h
silkcodec/src/main/cpp/silk/: SilkCodec.c  SilkCodec.h
silkcodec/src/main/java/com/baice/bc_im_silk/: SilkDecoder.java  SilkEncoder.java
silkcodec/src/main/res/values/: strings.xml
